--- a/less/sprite-retina.less
+++ b/less/sprite-retina.less
@@ -78,27 +78,27 @@ At the bottom of this section, we provide information about the spritesheet itse
 @logo-footer-2x-image: '../img/sprite-retina.png';
 @logo-footer-2x: 836px 0px -836px 0px 690px 414px 1526px 930px '../img/sprite-retina.png' logo-footer-2x;
 @logo-menu-2x-name: logo-menu-2x;
-@logo-menu-2x-x: 0px;
-@logo-menu-2x-y: 502px;
-@logo-menu-2x-offset-x: 0px;
-@logo-menu-2x-offset-y: -502px;
+@logo-menu-2x-x: 836px;
+@logo-menu-2x-y: 414px;
+@logo-menu-2x-offset-x: -836px;
+@logo-menu-2x-offset-y: -414px;
 @logo-menu-2x-width: 550px;
 @logo-menu-2x-height: 78px;
 @logo-menu-2x-total-width: 1526px;
 @logo-menu-2x-total-height: 930px;
 @logo-menu-2x-image: '../img/sprite-retina.png';
-@logo-menu-2x: 0px 502px 0px -502px 550px 78px 1526px 930px '../img/sprite-retina.png' logo-menu-2x;
+@logo-menu-2x: 836px 414px -836px -414px 550px 78px 1526px 930px '../img/sprite-retina.png' logo-menu-2x;
 @logo-nav-2x-name: logo-nav-2x;
-@logo-nav-2x-x: 836px;
-@logo-nav-2x-y: 414px;
-@logo-nav-2x-offset-x: -836px;
-@logo-nav-2x-offset-y: -414px;
+@logo-nav-2x-x: 0px;
+@logo-nav-2x-y: 502px;
+@logo-nav-2x-offset-x: 0px;
+@logo-nav-2x-offset-y: -502px;
 @logo-nav-2x-width: 550px;
 @logo-nav-2x-height: 78px;
 @logo-nav-2x-total-width: 1526px;
 @logo-nav-2x-total-height: 930px;
 @logo-nav-2x-image: '../img/sprite-retina.png';
-@logo-nav-2x: 836px 414px -836px -414px 550px 78px 1526px 930px '../img/sprite-retina.png' logo-nav-2x;
+@logo-nav-2x: 0px 502px 0px -502px 550px 78px 1526px 930px '../img/sprite-retina.png' logo-nav-2x;
 @logo2-2x-name: logo2-2x;
 @logo2-2x-x: 0px;
 @logo2-2x-y: 708px;
@@ -122,16 +122,49 @@ At the bottom of this section, we provide information about the spritesheet itse
 @portfolio-arrow-2x-image: '../img/sprite-retina.png';
 @portfolio-arrow-2x: 520px 580px -520px -580px 210px 58px 1526px 930px '../img/sprite-retina.png' portfolio-arrow-2x;
 @prev-2x-name: prev-2x;
-@prev-2x-x: 98px;
+@prev-2x-x: 270px;
 @prev-2x-y: 708px;
-@prev-2x-offset-x: -98px;
+@prev-2x-offset-x: -270px;
 @prev-2x-offset-y: -708px;
 @prev-2x-width: 42px;
 @prev-2x-height: 70px;
 @prev-2x-total-width: 1526px;
 @prev-2x-total-height: 930px;
 @prev-2x-image: '../img/sprite-retina.png';
-@prev-2x: 98px 708px -98px -708px 42px 70px 1526px 930px '../img/sprite-retina.png' prev-2x;
+@prev-2x: 270px 708px -270px -708px 42px 70px 1526px 930px '../img/sprite-retina.png' prev-2x;
+@question-2x-name: question-2x;
+@question-2x-x: 98px;
+@question-2x-y: 708px;
+@question-2x-offset-x: -98px;
+@question-2x-offset-y: -708px;
+@question-2x-width: 88px;
+@question-2x-height: 104px;
+@question-2x-total-width: 1526px;
+@question-2x-total-height: 930px;
+@question-2x-image: '../img/sprite-retina.png';
+@question-2x: 98px 708px -98px -708px 88px 104px 1526px 930px '../img/sprite-retina.png' question-2x;
+@question-active-2x-name: question-active-2x;
+@question-active-2x-x: 186px;
+@question-active-2x-y: 708px;
+@question-active-2x-offset-x: -186px;
+@question-active-2x-offset-y: -708px;
+@question-active-2x-width: 84px;
+@question-active-2x-height: 100px;
+@question-active-2x-total-width: 1526px;
+@question-active-2x-total-height: 930px;
+@question-active-2x-image: '../img/sprite-retina.png';
+@question-active-2x: 186px 708px -186px -708px 84px 100px 1526px 930px '../img/sprite-retina.png' question-active-2x;
+@select-2x-name: select-2x;
+@select-2x-x: 1456px;
+@select-2x-y: 414px;
+@select-2x-offset-x: -1456px;
+@select-2x-offset-y: -414px;
+@select-2x-width: 32px;
+@select-2x-height: 20px;
+@select-2x-total-width: 1526px;
+@select-2x-total-height: 930px;
+@select-2x-image: '../img/sprite-retina.png';
+@select-2x: 1456px 414px -1456px -414px 32px 20px 1526px 930px '../img/sprite-retina.png' select-2x;
 @sidebar-email-2x-name: sidebar__email-2x;
 @sidebar-email-2x-x: 390px;
 @sidebar-email-2x-y: 580px;
@@ -144,42 +177,42 @@ At the bottom of this section, we provide information about the spritesheet itse
 @sidebar-email-2x-image: '../img/sprite-retina.png';
 @sidebar-email-2x: 390px 580px -390px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__email-2x;
 @sidebar-facebook-2x-name: sidebar__facebook-2x;
-@sidebar-facebook-2x-x: 130px;
+@sidebar-facebook-2x-x: 260px;
 @sidebar-facebook-2x-y: 580px;
-@sidebar-facebook-2x-offset-x: -130px;
+@sidebar-facebook-2x-offset-x: -260px;
 @sidebar-facebook-2x-offset-y: -580px;
 @sidebar-facebook-2x-width: 130px;
 @sidebar-facebook-2x-height: 128px;
 @sidebar-facebook-2x-total-width: 1526px;
 @sidebar-facebook-2x-total-height: 930px;
 @sidebar-facebook-2x-image: '../img/sprite-retina.png';
-@sidebar-facebook-2x: 130px 580px -130px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__facebook-2x;
+@sidebar-facebook-2x: 260px 580px -260px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__facebook-2x;
 @sidebar-instagram-2x-name: sidebar__instagram-2x;
-@sidebar-instagram-2x-x: 0px;
+@sidebar-instagram-2x-x: 130px;
 @sidebar-instagram-2x-y: 580px;
-@sidebar-instagram-2x-offset-x: 0px;
+@sidebar-instagram-2x-offset-x: -130px;
 @sidebar-instagram-2x-offset-y: -580px;
 @sidebar-instagram-2x-width: 130px;
 @sidebar-instagram-2x-height: 128px;
 @sidebar-instagram-2x-total-width: 1526px;
 @sidebar-instagram-2x-total-height: 930px;
 @sidebar-instagram-2x-image: '../img/sprite-retina.png';
-@sidebar-instagram-2x: 0px 580px 0px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__instagram-2x;
+@sidebar-instagram-2x: 130px 580px -130px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__instagram-2x;
 @sidebar-pinterest-2x-name: sidebar__pinterest-2x;
-@sidebar-pinterest-2x-x: 260px;
+@sidebar-pinterest-2x-x: 0px;
 @sidebar-pinterest-2x-y: 580px;
-@sidebar-pinterest-2x-offset-x: -260px;
+@sidebar-pinterest-2x-offset-x: 0px;
 @sidebar-pinterest-2x-offset-y: -580px;
 @sidebar-pinterest-2x-width: 130px;
 @sidebar-pinterest-2x-height: 128px;
 @sidebar-pinterest-2x-total-width: 1526px;
 @sidebar-pinterest-2x-total-height: 930px;
 @sidebar-pinterest-2x-image: '../img/sprite-retina.png';
-@sidebar-pinterest-2x: 260px 580px -260px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__pinterest-2x;
+@sidebar-pinterest-2x: 0px 580px 0px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__pinterest-2x;
 @spritesheet-width: 1526px;
 @spritesheet-height: 930px;
 @spritesheet-image: '../img/sprite-retina.png';
-@spritesheet-sprites: @anchor-2x @arrow-2x @blockquote-2x @facebook-2x @logo-2x @logo-footer-2x @logo-menu-2x @logo-nav-2x @logo2-2x @portfolio-arrow-2x @prev-2x @sidebar-email-2x @sidebar-facebook-2x @sidebar-instagram-2x @sidebar-pinterest-2x;
+@spritesheet-sprites: @anchor-2x @arrow-2x @blockquote-2x @facebook-2x @logo-2x @logo-footer-2x @logo-menu-2x @logo-nav-2x @logo2-2x @portfolio-arrow-2x @prev-2x @question-2x @question-active-2x @select-2x @sidebar-email-2x @sidebar-facebook-2x @sidebar-instagram-2x @sidebar-pinterest-2x;
 @spritesheet: 1526px 930px '../img/sprite-retina.png' @spritesheet-sprites;
 
 /*
