--- a/less/sprite.less
+++ b/less/sprite.less
@@ -111,60 +111,93 @@ At the bottom of this section, we provide information about the spritesheet itse
 @portfolio-arrow-image: '../img/sprite.png';
 @portfolio-arrow: 260px 271px -260px -271px 105px 29px 763px 446px '../img/sprite.png' portfolio-arrow;
 @prev-name: prev;
-@prev-x: 73px;
+@prev-x: 159px;
 @prev-y: 335px;
-@prev-offset-x: -73px;
+@prev-offset-x: -159px;
 @prev-offset-y: -335px;
 @prev-width: 21px;
 @prev-height: 35px;
 @prev-total-width: 763px;
 @prev-total-height: 446px;
 @prev-image: '../img/sprite.png';
-@prev: 73px 335px -73px -335px 21px 35px 763px 446px '../img/sprite.png' prev;
+@prev: 159px 335px -159px -335px 21px 35px 763px 446px '../img/sprite.png' prev;
+@question-active-name: question-active;
+@question-active-x: 93px;
+@question-active-y: 335px;
+@question-active-offset-x: -93px;
+@question-active-offset-y: -335px;
+@question-active-width: 42px;
+@question-active-height: 50px;
+@question-active-total-width: 763px;
+@question-active-total-height: 446px;
+@question-active-image: '../img/sprite.png';
+@question-active: 93px 335px -93px -335px 42px 50px 763px 446px '../img/sprite.png' question-active;
+@question-name: question;
+@question-x: 49px;
+@question-y: 335px;
+@question-offset-x: -49px;
+@question-offset-y: -335px;
+@question-width: 44px;
+@question-height: 52px;
+@question-total-width: 763px;
+@question-total-height: 446px;
+@question-image: '../img/sprite.png';
+@question: 49px 335px -49px -335px 44px 52px 763px 446px '../img/sprite.png' question;
+@select-name: select;
+@select-x: 728px;
+@select-y: 207px;
+@select-offset-x: -728px;
+@select-offset-y: -207px;
+@select-width: 16px;
+@select-height: 10px;
+@select-total-width: 763px;
+@select-total-height: 446px;
+@select-image: '../img/sprite.png';
+@select: 728px 207px -728px -207px 16px 10px 763px 446px '../img/sprite.png' select;
 @sidebar-category-name: sidebar-category;
-@sidebar-category-x: 49px;
+@sidebar-category-x: 135px;
 @sidebar-category-y: 335px;
-@sidebar-category-offset-x: -49px;
+@sidebar-category-offset-x: -135px;
 @sidebar-category-offset-y: -335px;
 @sidebar-category-width: 24px;
 @sidebar-category-height: 36px;
 @sidebar-category-total-width: 763px;
 @sidebar-category-total-height: 446px;
 @sidebar-category-image: '../img/sprite.png';
-@sidebar-category: 49px 335px -49px -335px 24px 36px 763px 446px '../img/sprite.png' sidebar-category;
+@sidebar-category: 135px 335px -135px -335px 24px 36px 763px 446px '../img/sprite.png' sidebar-category;
 @sidebar-email-name: sidebar__email;
-@sidebar-email-x: 195px;
+@sidebar-email-x: 65px;
 @sidebar-email-y: 271px;
-@sidebar-email-offset-x: -195px;
+@sidebar-email-offset-x: -65px;
 @sidebar-email-offset-y: -271px;
 @sidebar-email-width: 65px;
 @sidebar-email-height: 64px;
 @sidebar-email-total-width: 763px;
 @sidebar-email-total-height: 446px;
 @sidebar-email-image: '../img/sprite.png';
-@sidebar-email: 195px 271px -195px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__email;
+@sidebar-email: 65px 271px -65px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__email;
 @sidebar-facebook-name: sidebar__facebook;
-@sidebar-facebook-x: 130px;
+@sidebar-facebook-x: 195px;
 @sidebar-facebook-y: 271px;
-@sidebar-facebook-offset-x: -130px;
+@sidebar-facebook-offset-x: -195px;
 @sidebar-facebook-offset-y: -271px;
 @sidebar-facebook-width: 65px;
 @sidebar-facebook-height: 64px;
 @sidebar-facebook-total-width: 763px;
 @sidebar-facebook-total-height: 446px;
 @sidebar-facebook-image: '../img/sprite.png';
-@sidebar-facebook: 130px 271px -130px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__facebook;
+@sidebar-facebook: 195px 271px -195px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__facebook;
 @sidebar-instagram-name: sidebar__instagram;
-@sidebar-instagram-x: 65px;
+@sidebar-instagram-x: 130px;
 @sidebar-instagram-y: 271px;
-@sidebar-instagram-offset-x: -65px;
+@sidebar-instagram-offset-x: -130px;
 @sidebar-instagram-offset-y: -271px;
 @sidebar-instagram-width: 65px;
 @sidebar-instagram-height: 64px;
 @sidebar-instagram-total-width: 763px;
 @sidebar-instagram-total-height: 446px;
 @sidebar-instagram-image: '../img/sprite.png';
-@sidebar-instagram: 65px 271px -65px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__instagram;
+@sidebar-instagram: 130px 271px -130px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__instagram;
 @sidebar-pinterest-name: sidebar__pinterest;
 @sidebar-pinterest-x: 0px;
 @sidebar-pinterest-y: 271px;
@@ -179,7 +212,7 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet-width: 763px;
 @spritesheet-height: 446px;
 @spritesheet-image: '../img/sprite.png';
-@spritesheet-sprites: @anchor @arrow @blockquote @facebook @logo-footer @logo-nav @logo @logo2 @portfolio-arrow @prev @sidebar-category @sidebar-email @sidebar-facebook @sidebar-instagram @sidebar-pinterest;
+@spritesheet-sprites: @anchor @arrow @blockquote @facebook @logo-footer @logo-nav @logo @logo2 @portfolio-arrow @prev @question-active @question @select @sidebar-category @sidebar-email @sidebar-facebook @sidebar-instagram @sidebar-pinterest;
 @spritesheet: 763px 446px '../img/sprite.png' @spritesheet-sprites;
 
 /*
